<?xml version="1.0" encoding="utf-8"?>
<!--
********************************************************************************************************************
** ECEN689: Special Topics in Cloud-Enabled Mobile Sensing
**          RF Signal Map
**
**   File Name: 	fragment_main.xml
**     Version:		1.0.0
**        Date:	    April 9, 2016
** Description:	    Main Fragment
**      Author:     John Lusher II
*********************************************************************************************************************
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right">
    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:background="#585962">
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="Signal Strength"
        android:layout_gravity="right"
        android:padding="3dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#2f527a"
        >
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/main_rssi_label"
            android:id="@+id/textRSSILabel"
            android:textAlignment="viewStart"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#dfdede"
            android:layout_gravity="top"
            android:padding="5dp"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textRSSI"
            android:layout_row="1"
            android:layout_column="0"
            android:text="- no data -"
            android:textColor="#ffffff"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="top"/>
        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/main_rssi_label2"
            android:id="@+id/textRSSILabel2"
            android:textAlignment="viewStart"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#dfdede"
            android:layout_gravity="top"
            android:padding="5dp"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textRSSI2"
            android:layout_row="1"
            android:layout_column="1"
            android:text="- no data -"
            android:textColor="#ffffff"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="top"/>
        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/main_rssi_label3"
            android:id="@+id/textRSSILabel3"
            android:textAlignment="viewStart"
            android:layout_row="0"
            android:layout_column="2"
            android:textColor="#dfdede"
            android:layout_gravity="top"
            android:padding="5dp"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textRSSI3"
            android:layout_row="1"
            android:layout_column="2"
            android:text="- no data -"
            android:textColor="#ffffff"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="top"/>
        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/main_rssi_labelcell"
            android:id="@+id/textRSSILabelCell"
            android:textAlignment="viewStart"
            android:layout_row="0"
            android:layout_column="3"
            android:textColor="#dfdede"
            android:layout_gravity="top"
            android:padding="5dp"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/textRSSICell"
            android:layout_row="1"
            android:layout_column="3"
            android:text="- no data -"
            android:textColor="#ffffff"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:layout_gravity="top"/>
    </GridLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#2f527a"
        >
        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/main_lat_label"
                android:id="@+id/textLatLabel"
                android:textAlignment="viewStart"
                android:layout_row="0"
                android:layout_column="0"
                android:textColor="#dfdede"
                android:padding="5dp"
                android:paddingLeft="10dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/main_long_label"
                android:id="@+id/textLongLabel"
                android:textAlignment="viewEnd"
                android:layout_row="0"
                android:layout_column="1"
                android:textColor="#dfdede"
                android:layout_gravity="right"
                android:padding="5dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/textLat"
                android:layout_row="1"
                android:layout_column="0"
                android:text="- no data -"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/textLong"
                android:layout_row="1"
                android:layout_column="1"
                android:text="- no data -"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:textAlignment="viewEnd"
                android:layout_gravity="right"/>
        </GridLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#2f527a"
        >
        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="3"
            android:rowCount="2"
            android:orientation="horizontal"
            android:columnOrderPreserved="false"
            android:minWidth="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/main_yaw_label"
                android:id="@+id/textYawLabel"
                android:textAlignment="viewStart"
                android:layout_row="0"
                android:layout_column="0"
                android:textColor="#dfdede"
                android:padding="5dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/main_roll_label"
                android:id="@+id/textRollLabel"
                android:textAlignment="viewEnd"
                android:layout_row="0"
                android:layout_column="2"
                android:textColor="#dfdede"
                android:padding="5dp"
                android:paddingRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/main_pitch_label"
                android:id="@+id/textPitchLabel"
                android:textAlignment="center"
                android:layout_row="0"
                android:layout_column="1"
                android:textColor="#dfdede"
                android:padding="5dp"
                android:paddingRight="10dp"
                android:layout_gravity="fill_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/textYaw"
                android:layout_row="1"
                android:layout_column="0"
                android:text="280°"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:textAlignment="viewStart"
                android:layout_gravity="left"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/textRoll"
                android:layout_row="1"
                android:layout_column="2"
                android:text="280°"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:textAlignment="viewEnd"
                android:layout_gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/textPitch"
                android:layout_row="1"
                android:layout_column="1"
                android:text="280°"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="fill_horizontal"/>
        </GridLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Record Data"
            android:id="@+id/btnRecord"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send Data to Server"
            android:id="@+id/btnServer"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Collect Data (2 sec)"
            android:id="@+id/checkBoxAuto"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/btnRecord"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#e7dfb9"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/main_log_label"
            android:id="@+id/textLVLabel"
            android:textAlignment="viewStart"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#000000"
            android:padding="3dp"
            android:paddingLeft="10dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#e7dfb9"
        >
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lvData"
            android:layout_gravity="left|top"/>
    </FrameLayout>

</LinearLayout>